# clin

./: .dockerignore  .gitignore  .zappr.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  MAINTAINERS  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml  publish.yml
clin/: clinfile.py  config.py  nakadi.py  processor.py  run.py  utils.py  yamlops.py
clin/clients/: http_client.py  nakadi.py  nakadi_sql.py  shared.py
clin/models/: auth.py  event_type.py  projection.py  shared.py  sql_query.py  subscription.py
docs/: README.md
docs/examples/: .clin
docs/examples/batch/: compact-version.clin.yaml  expanded-version.clin.yaml
docs/examples/batch/apply/: input.event-type.yaml  output.event-type.yaml  sql-query.yaml  subscription.yaml
docs/examples/batch/schemas/: input.schema.yaml  output.schema.yaml
docs/examples/batch/users/: avengers.users.yaml
docs/examples/single/: event-type.yaml  schema.yaml  sql-query.yaml  subscription.yaml
tests/: test_clinfile.py  test_config.py  test_models.py  test_package.py
