[tool.poetry]
name = "clin"
version = "1.0.dev0"
description = "Cli for Nakadi resources management in Infrastructure as Code style"
homepage = "https://github.com/zalando-incubator/clin"
license = "MIT"
readme = "README.md"

authors = [
    "Dmitry Erokhin <dmitry.erokhin@zalando.de>",
    "Daniel Stockhammer <daniel.stockhammer@zalando.de>"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Software Development :: Build Tools",
]

keywords = [ "Nakadi" ]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23"
pyyaml = "^5.4"
click = "^7.1"
deepdiff = "^5.2"
pygments = "^2.6"
colorama = "^0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
toml = "^0.10.0"
black = "^20.8b1"

[tool.poetry.scripts]
clin = "clin.run:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
