[tool.poetry]
name = "clin"
version = "1.0.dev0"
description = "Cli for Nakadi resources management in Infrastructure as Code style"
homepage = "https://github.com/zalando-incubator/clin"
license = "MIT"
readme = "README.md"

authors = [
    "Dmitry Erokhin <dmitry.erokhin@zalando.de>",
    "Daniel Stockhammer <daniel.stockhammer@zalando.de>"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Software Development :: Build Tools",
]

keywords = [ "Nakadi" ]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31"
pyyaml = "^6.0"
click = "^8.1"
deepdiff = "^6.7"
pygments = "^2.17"
colorama = "^0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
toml = "^0.10"
black = "^23.3"

[tool.poetry.scripts]
clin = "clin.run:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
